v0.97 ??-Jan-04
Allow ; in filenames.
Minor improvements to logging code.
Fix bug that could leave an open socket if mounting failed.
Added unumask option.

v0.96 14-Dec-03
Fixed bug that could cause some filetypes to be incorrectly set to the
default filetype.
No longer waits for a reponse when unmounting, so it won't wait for
a timeout if server is uncontactable when the module is killed.
Implemented pipelining of file reads and writes to improve speed, and
added the Pipelining option to control this.
Fixed a bug that on some network cards could cause a
"no buffer space available" error.

v0.95 9-Nov-03
Fixed bug in OS_File 0 handling which could cause incorrect size and
filetype if an existing file of the same name was present.

v0.94 6-Nov-03
Added support for symlinks.

v0.93 30-Oct-03
Work around RISC OS bug that could cause directory listings to miss
entries if the server returned cookies with the top bit set.

v0.92 22-Oct-03
Fix bug in IP address handling.
Fixed bug in reading of auxilliary gids from pcnfsd.
Allow ' in filenames.
Support the read boot option entry point, so *cat and *ex work.
Fix bug in alignment of OS_GBPB 8/9 results.

v0.91 18-Oct-03
Specifying an IP address as the server name now works for addresses
that don't have a reverse DNS entry.
Added LocalPort option, and defaults to using a low numbered port.
Improved handling of errors on module finalisation.
Add MaxDataBuffer option to control the maximum size of packets.

v0.90 14-Oct-03
First Beta release.
